integration/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: integration
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /integration
            backend:
              serviceName: integration
              servicePort: 80
